<resources>
    <string name="app_name">Recuperatorio</string>
    <string name="Bienvenido">Bienvenido/a</string>
    <string name="inicia_sesion">Inicia sesión para empezar</string>
    <string name="nombre_de_usuario">Ingrese correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="btn_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="txt_registrese">Registrarse</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_dni">DNI</string>
    <string name="txt_fecha">Fecha nacimiento</string>
    <string name="txt_correo">Correo electrónico</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_repetir_contrasena">Repetir Contraseña</string>
    <string name="agregar_evento">Agregar Evento</string>
    <string name="mis_eventos">Mis Eventos</string>
    <string name="events">Eventos</string>
    <string name="lbl_Titulo">Titulo</string>
    <string name="lbl_Descripcion">Descripcion</string>
    <string name="lbl_Fecha">Fecha</string>
    <string name="lbl_Hora">Hora</string>
    <string name="lbl_Categoria">Categoria</string>
    <string name="btn_Aceptar">Aceptar</string>
    <string name="lbl_Busqueda">Busqueda</string>
    <string name="navigation_drawler_close">Cerrar Navegacion</string>
    <string name="navigation_drawler_open">Abrir Navegacion</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="btnreturn">Regresar</string>


    <string-array name="Localidades">
        <item>Don Torcuato</item>
        <item>Pacheco</item>
        <item>Rincon de Milberg</item>
        <item>Nordelta</item>
    </string-array>

</resources>