<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LogIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_bienvenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/Bienvenido"
                android:textColor="#2196F3"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/lbl_IniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/inicia_sesion"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txt_Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/nombre_de_usuario"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_Contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/contrasenia"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="0"
                android:gravity="center"
                android:onClick="login"
                android:text="@string/btn_iniciar_sesion" />

            <TextView
                android:id="@+id/txt_Registrese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:onClick="Redirigir"
                android:text="@string/txt_registrese"
                android:textColor="#2196F3" />

            <include layout="@layout/progress_bar"></include>
        </LinearLayout>



    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>